# r-kafka

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  NAMESPACE  README.md  configure  configure.ac  docker-compose.yml
.github/workflows/: r.yml
R/: 00-NAMESPACE.R  Consumer.R  KafkaMessage.R  Message.R  Producer.R
examples/iss/: README.md  app-blog.R  app.R  producer.R
man/: Consumer.Rd  Producer.Rd  content.Rd  has_error.Rd  is_empty.Rd  key.Rd  new_kafka_message.Rd  print.KafkaMessage.Rd  result_error_code.Rd  result_error_message.Rd  result_has_error.Rd  result_message.Rd
src/: Makevars  Makevars.win  RcppExports.cpp  consumer.cpp  producer.cpp  utils.h  utils.hpp
tests/: testthat.R
tests/testthat/: setup-env.R  test-commit.R  test-consumer.R  test-message.R  test-producer.R  test-roundtrip.R
